[package]
name = "mouse-battery"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = "2.6.3"
image = { version = "0.25.2", features = ["jpeg"], default-features = false }
tao = "0.30.3"
tray-icon = "0.19.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "pl"
path = "src/playground.rs"
